added sign up form

--- a/templates/profile_view.html
+++ b/templates/profile_view.html
@@ -1,8 +1,7 @@
-<!-- templates/home.html -->
 {% extends 'base.html' %}
 
 {% block content %}
     <h1>{{ msg }}</h1>
     <br>
-    <a href="/profile/new">Create Profile</a>
+    {{ profile }}
 {% endblock %}
