--- a/templates/profile_new.html
+++ b/templates/profile_new.html
@@ -2,7 +2,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<form method='POST' action='/profile/view'>
+<form method='POST' action='/admin'>
     <fieldset>
     <legend><h2>Create Profile</h2></legend>
     <!-- TITLE -->
