user can view an individual profile

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,12 +3,12 @@
 <html>
 <head>
   <meta charset='utf-8'>
-  <title>🔈 InstaShout 🔊</title>
+  <title><a href="/">🔈 InstaShout 🔊</a></title>
 </head>
 <body>
      
     {% block content %}
-        BODY CONTENT GOES HERE
+        
     {% endblock %}
 
 </body>
