--- a/templates/home.html
+++ b/templates/home.html
@@ -4,5 +4,6 @@
 {% block content %}
     <h1>{{ msg }}</h1>
     <br>
-    <a href="/profile/new">Create Profile</a>
+    <a href="/profile/new">Create Profile</a><br>
+    <a href='/profile/{{ profile_id }}'>View Profile</a>
 {% endblock %}
