user can edit profile

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta charset='utf-8'>
-  <title><a href="/">🔈 InstaShout 🔊</a></title>
+  <title>🔈 InstaShout 🔊</title>
 </head>
 <body>
      
