user can delete profile

--- a/templates/profile_new.html
+++ b/templates/profile_new.html
@@ -11,8 +11,8 @@
         <input type='text' name='profile_name' />
     </p>
     <p>
-        <label for='profile_phone'>Your Cellphone Number</label><br>
-        <input type='text' name='profile_phone' />
+        <label for='profile_number'>Your Cellphone Number</label><br>
+        <input type='text' name='profile_number' />
     </p>
     <h3>Emergency Contact</h3>
     <p>
