--- a/templates/ref_list.html
+++ b/templates/ref_list.html
@@ -11,6 +11,7 @@
         {{ profile.contact_provider }}
     {% endfor %}
     <p><a href='/profiles/{{ profile_id }}/edit'>Edit</a></p>
+    <a href="/">Back</a>
 
 {% endblock %}
 
