aborted css attempt,fixed redirects & added Procfile

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,13 +3,13 @@
 <html>
 <head>
   <meta charset='utf-8'>
+
   <title>🔈 InstaShout 🔊</title>
 </head>
-<body>
-     
-    {% block content %}
-        
-    {% endblock %}
 
+<body>
+    <div class="container-fluid">    
+    {% block content %}{% endblock %}
+    </div>
 </body>
 </html>
