--- a/templates/profile_new.html
+++ b/templates/profile_new.html
@@ -4,7 +4,7 @@
 {% block content %}
 <form method='POST' action='/admin'>
     <fieldset>
-    <legend><h2>🔊 Create Profile 🔊</h2></legend>
+    <legend><h2>🔊 Create Profile</h2></legend>
     <!-- TITLE -->
     <p>
         <label for='profile_name'>Your Name</label><br>
