--- a/templates/profile_view.html
+++ b/templates/profile_view.html
@@ -26,7 +26,7 @@
 
     <!-- Delete button -->
     <p><form method='POST' action='/profiles/{{ profile_id }}/delete'>
-    <button type='submit'>Delete</button>
+    <button type="button" class="btn btn-sm btn-danger">This is the Delete Button - Do Not Delete</button>
     </form></p>
 
 {% endblock %}
