--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
   <meta charset='utf-8'>
 
   <title>🔈 InstaShout 🔊</title>
+  <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
